# salesforce-foundryagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-infra.yml
.specify/memory/: constitution.md
agents/sales/: system_prompt.md
agents/service/: system_prompt.md
config/: risk_thresholds.yaml
docs/: azure-setup.md  data-classification.md  extending-scenarios.md  hosting-modes.md  post-pilot-survey.md  salesforce-quickstart.md  salesforce-setup.md
docs/runbooks/: incident-response.md  rollback-procedures.md
infra/bicep/: main.bicep  main.json
infra/bicep/modules/: ai-foundry.bicep  (+10 more)
mcp_servers/: __init__.py
mcp_servers/salesforce_crm/: __init__.py  server.py
mcp_servers/salesforce_knowledge/: __init__.py  server.py
notebooks/: 01_sales_pipeline_summary.ipynb  02_sales_account_briefing.ipynb  03_service_case_triage.ipynb  04_service_kb_assistant.ipynb  05_orchestrator_multi_domain.ipynb
scripts/: bootstrap_env.sh  deploy_app.sh  provision_azure.sh
shared/: __init__.py  auth.py  config.py  knowledge_sync.py  models.py  salesforce_client.py  telemetry.py
specs/001-salesforce-ai-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py
tests/contract/: test_crm_tools.py  test_knowledge_tools.py
tests/integration/: test_agent_e2e.py  test_teams_bot.py
tests/performance/: test_load.py
tests/unit/: test_models.py  test_salesforce_client.py
(+14 files in other folders)
